old-bp/Helm_Charts/nifi-ingress.yml
# NiFi Ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nifi-ingress
  namespace: tkg-bigdata-ns
  labels:
    name: nifi-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/service-upstream: "true"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"ingress.kubernetes.io/rewrite-target":"/","ingress.kubernetes.io/service-upstream":"true","kubernetes.io/ingress.class":"nginx","nginx.ingress.kubernetes.io/add-base-url":"true","nginx.ingress.kubernetes.io/backend-protocol":"HTTPS","nginx.ingress.kubernetes.io/ssl-ciphers":"ALL:!aNULL:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv2:+EXP","nginx.ingress.kubernetes.io/ssl-passthrough":"true","nginx.ingress.kubernete [...]
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-ciphers: ALL:!aNULL:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv2:+EXP
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.org/ssl-services: |
      "nifi"
spec:
  rules:
  - host: nifi.big-data.blueprint.lab
    http:
      paths:
      - path: /nifi
        backend:
            serviceName: nifi
            servicePort: 8443
        pathType: ImplementationSpecific
 # tls:
 # - hosts:
 #   - bigdataet-nifi.kubernetesuat.safaricom.co.ke
 #   secretName: ingress-bigdataet-ingress-secret
status:
  loadBalancer:
    ingress:
    - {}
